...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComments"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <include 
                android:id="@+id/paginationControls"
...
