...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
            
        <!-- Reply Button -->
        <Button
            android:id="@+id/replyButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:minWidth="0dp"
...
