...
                android:textSize="14sp"
                tools:text="User Name" />
        </LinearLayout>

        <!-- Post Input Field -->
        <EditText
            android:id="@+id/postContentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:gravity="top|start"
            android:hint="@string/create_post_hint"
...
                android:textColor="#757575"
                android:background="?android:attr/selectableItemBackground"
                android:layout_marginEnd="8dp"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitPostButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/post"
                android:textColor="@android:color/white"
                android:textStyle="bold"
...
